// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertSummaryView Behavior event code renders additional summary rows 1`] = `
.c0 .euiTableHeaderCell,
.c0 .euiTableRowCell {
  border: none;
}

.c0 .euiTableHeaderCell .euiTableCellContent {
  padding: 0;
}

.c0 .flyoutOverviewDescription .hoverActions-active .timelines__hoverActionButton,
.c0 .flyoutOverviewDescription .hoverActions-active .securitySolution__hoverActionButton {
  opacity: 1;
}

.c0 .flyoutOverviewDescription:hover .timelines__hoverActionButton,
.c0 .flyoutOverviewDescription:hover .securitySolution__hoverActionButton {
  opacity: 1;
}

.c1 {
  line-height: 1.7rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:focus-within .timelines__hoverActionButton,
.c2:focus-within .securitySolution__hoverActionButton {
  opacity: 1;
}

.c2:hover .timelines__hoverActionButton,
.c2:hover .securitySolution__hoverActionButton {
  opacity: 1;
}

.c2 .timelines__hoverActionButton,
.c2 .securitySolution__hoverActionButton {
  opacity: 0;
}

.c2 .timelines__hoverActionButton:focus,
.c2 .securitySolution__hoverActionButton:focus {
  opacity: 1;
}

<div
  class="euiBasicTable c0"
  data-test-subj="summary-view"
>
  <div>
    <div
      class="euiTableHeaderMobile"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
      </div>
    </div>
    <table
      class="euiTable euiTable--compressed euiTable--responsive"
      id="__table_generated-id"
      tabindex="-1"
    >
      <caption
        class="euiScreenReaderOnly euiTableCaption"
      />
      <thead>
        <tr>
          <td
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_title_0"
            role="columnheader"
            style="width: 220px;"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              />
            </span>
          </td>
          <td
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_description_1"
            role="columnheader"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              />
            </span>
          </td>
        </tr>
      </thead>
      <tbody>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                host.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-host.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    windows-native
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field host.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-host.name"
                    field="host.name"
                    items="[object Object]"
                    value="windows-native"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                user.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-user.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    administrator
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field user.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-user.name"
                    field="user.name"
                    items="[object Object]"
                    value="administrator"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                process.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-process.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    -
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field process.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-process.name"
                    field="process.name"
                    items="[object Object]"
                    value="-"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AlertSummaryView Memory event code renders additional summary rows 1`] = `
.c0 .euiTableHeaderCell,
.c0 .euiTableRowCell {
  border: none;
}

.c0 .euiTableHeaderCell .euiTableCellContent {
  padding: 0;
}

.c0 .flyoutOverviewDescription .hoverActions-active .timelines__hoverActionButton,
.c0 .flyoutOverviewDescription .hoverActions-active .securitySolution__hoverActionButton {
  opacity: 1;
}

.c0 .flyoutOverviewDescription:hover .timelines__hoverActionButton,
.c0 .flyoutOverviewDescription:hover .securitySolution__hoverActionButton {
  opacity: 1;
}

.c1 {
  line-height: 1.7rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:focus-within .timelines__hoverActionButton,
.c2:focus-within .securitySolution__hoverActionButton {
  opacity: 1;
}

.c2:hover .timelines__hoverActionButton,
.c2:hover .securitySolution__hoverActionButton {
  opacity: 1;
}

.c2 .timelines__hoverActionButton,
.c2 .securitySolution__hoverActionButton {
  opacity: 0;
}

.c2 .timelines__hoverActionButton:focus,
.c2 .securitySolution__hoverActionButton:focus {
  opacity: 1;
}

<div
  class="euiBasicTable c0"
  data-test-subj="summary-view"
>
  <div>
    <div
      class="euiTableHeaderMobile"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
      </div>
    </div>
    <table
      class="euiTable euiTable--compressed euiTable--responsive"
      id="__table_generated-id"
      tabindex="-1"
    >
      <caption
        class="euiScreenReaderOnly euiTableCaption"
      />
      <thead>
        <tr>
          <td
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_title_0"
            role="columnheader"
            style="width: 220px;"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              />
            </span>
          </td>
          <td
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_description_1"
            role="columnheader"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              />
            </span>
          </td>
        </tr>
      </thead>
      <tbody>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                host.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-host.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    windows-native
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field host.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-host.name"
                    field="host.name"
                    items="[object Object]"
                    value="windows-native"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                user.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-user.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    administrator
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field user.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-user.name"
                    field="user.name"
                    items="[object Object]"
                    value="administrator"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AlertSummaryView Network event renders the correct summary rows 1`] = `
.c0 .euiTableHeaderCell,
.c0 .euiTableRowCell {
  border: none;
}

.c0 .euiTableHeaderCell .euiTableCellContent {
  padding: 0;
}

.c0 .flyoutOverviewDescription .hoverActions-active .timelines__hoverActionButton,
.c0 .flyoutOverviewDescription .hoverActions-active .securitySolution__hoverActionButton {
  opacity: 1;
}

.c0 .flyoutOverviewDescription:hover .timelines__hoverActionButton,
.c0 .flyoutOverviewDescription:hover .securitySolution__hoverActionButton {
  opacity: 1;
}

.c1 {
  line-height: 1.7rem;
}

.c3 svg {
  position: relative;
  top: -1px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:focus-within .timelines__hoverActionButton,
.c2:focus-within .securitySolution__hoverActionButton {
  opacity: 1;
}

.c2:hover .timelines__hoverActionButton,
.c2:hover .securitySolution__hoverActionButton {
  opacity: 1;
}

.c2 .timelines__hoverActionButton,
.c2 .securitySolution__hoverActionButton {
  opacity: 0;
}

.c2 .timelines__hoverActionButton:focus,
.c2 .securitySolution__hoverActionButton:focus {
  opacity: 1;
}

<div
  class="euiBasicTable c0"
  data-test-subj="summary-view"
>
  <div>
    <div
      class="euiTableHeaderMobile"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
      </div>
    </div>
    <table
      class="euiTable euiTable--compressed euiTable--responsive"
      id="__table_generated-id"
      tabindex="-1"
    >
      <caption
        class="euiScreenReaderOnly euiTableCaption"
      />
      <thead>
        <tr>
          <td
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_title_0"
            role="columnheader"
            style="width: 220px;"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              />
            </span>
          </td>
          <td
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_description_1"
            role="columnheader"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              />
            </span>
          </td>
        </tr>
      </thead>
      <tbody>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                host.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-host.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    windows-native
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field host.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-host.name"
                    field="host.name"
                    items="[object Object]"
                    value="windows-native"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                user.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-user.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    administrator
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field user.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-user.name"
                    field="user.name"
                    items="[object Object]"
                    value="administrator"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                destination.address
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-destination.address"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero eventFieldsTable__fieldValue"
                >
                  <span
                    data-test-subj="formatted-field-destination.address"
                  >
                    google.com
                  </span>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field destination.address. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-destination.address"
                    field="destination.address"
                    items="[object Object],[object Object],[object Object]"
                    value="google.com"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                source.address
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-source.address"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    185.156.74.3
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field source.address. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-source.address"
                    field="source.address"
                    items="[object Object]"
                    value="185.156.74.3"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                source.port
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-source.port"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero eventFieldsTable__fieldValue"
                >
                  <div
                    class="c3"
                  >
                    <a
                      class="euiLink euiLink--primary"
                      data-test-subj="port-or-service-name-link"
                      href="https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml?search=0"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      0
                      <span
                        aria-label="External link"
                        class="euiLink__externalIcon"
                        data-euiicon-type="popout"
                      />
                      <span
                        class="euiScreenReaderOnly"
                      >
                        (opens in a new tab or window)
                      </span>
                    </a>
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field source.port. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-source.port"
                    field="source.port"
                    items="[object Object],[object Object]"
                    value="0"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                process.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-process.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    -
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field process.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-process.name"
                    field="process.name"
                    items="[object Object]"
                    value="-"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AlertSummaryView Ransomware event code resolves fields from the source event 1`] = `
.c0 .euiTableHeaderCell,
.c0 .euiTableRowCell {
  border: none;
}

.c0 .euiTableHeaderCell .euiTableCellContent {
  padding: 0;
}

.c0 .flyoutOverviewDescription .hoverActions-active .timelines__hoverActionButton,
.c0 .flyoutOverviewDescription .hoverActions-active .securitySolution__hoverActionButton {
  opacity: 1;
}

.c0 .flyoutOverviewDescription:hover .timelines__hoverActionButton,
.c0 .flyoutOverviewDescription:hover .securitySolution__hoverActionButton {
  opacity: 1;
}

.c1 {
  line-height: 1.7rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:focus-within .timelines__hoverActionButton,
.c2:focus-within .securitySolution__hoverActionButton {
  opacity: 1;
}

.c2:hover .timelines__hoverActionButton,
.c2:hover .securitySolution__hoverActionButton {
  opacity: 1;
}

.c2 .timelines__hoverActionButton,
.c2 .securitySolution__hoverActionButton {
  opacity: 0;
}

.c2 .timelines__hoverActionButton:focus,
.c2 .securitySolution__hoverActionButton:focus {
  opacity: 1;
}

<div
  class="euiBasicTable c0"
  data-test-subj="summary-view"
>
  <div>
    <div
      class="euiTableHeaderMobile"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
      </div>
    </div>
    <table
      class="euiTable euiTable--compressed euiTable--responsive"
      id="__table_generated-id"
      tabindex="-1"
    >
      <caption
        class="euiScreenReaderOnly euiTableCaption"
      />
      <thead>
        <tr>
          <td
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_title_0"
            role="columnheader"
            style="width: 220px;"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              />
            </span>
          </td>
          <td
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_description_1"
            role="columnheader"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              />
            </span>
          </td>
        </tr>
      </thead>
      <tbody>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                host.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-host.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    windows-native
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field host.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-host.name"
                    field="host.name"
                    items="[object Object]"
                    value="windows-native"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                user.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-user.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    administrator
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field user.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-user.name"
                    field="user.name"
                    items="[object Object]"
                    value="administrator"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            style="width: 220px;"
          >
            
            <div
              class="euiTableCellContent euiTableCellContent--overflowingContent"
            >
              <h5
                class="c1 euiTitle euiTitle--xxxsmall"
              >
                process.name
              </h5>
            </div>
          </td>
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            
            <div
              class="euiTableCellContent flyoutOverviewDescription euiTableCellContent--overflowingContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionColumn euiFlexGroup--responsive"
                data-test-subj="event-field-process.name"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiText euiText--extraSmall"
                  >
                    -
                  </div>
                </div>
              </div>
              <div
                data-eui="EuiFocusTrap"
              >
                <div
                  class="c2"
                >
                  <p
                    class="euiScreenReaderOnly"
                  >
                    You are in a dialog, containing options for field process.name. Press tab to navigate options. Press escape to exit.
                  </p>
                  <div
                    data-test-subj="hover-actions-filter-for"
                  >
                    Filter button
                  </div>
                  <div
                    data-test-subj="hover-actions-filter-out"
                  >
                    Filter out button
                  </div>
                  <div
                    data-test-subj="more-actions-process.name"
                    field="process.name"
                    items="[object Object]"
                    value="-"
                  >
                    Overflow button
                  </div>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
